--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,17 +21,42 @@ header {
 }
 
 header h1 {
+  background-color: none;
   margin-left: 20px;
+  /* text-transform: uppercase; */
+}
+
+header h1 span {
+  color: blue;
+}
+
+header div {
+  background-color: none;
+  display: flex;
+  justify-content: flex-end;
+}
+
+header label {
+  text-transform:uppercase;
+  height: 30px;
+  line-height: 30px;
 }
 
 header select {
   margin-right: 20px;
+  margin-left: 10px;
+  border: 1px solid black;
+  height: 30px;
+}
+
+header select:hover {
+  background-color: lightblue;
 }
 
 #mountains {
   position: relative;
   z-index: 1;
-  top: 80px;
+  top: 86px;
   background-color: none;
   display: flex;
   flex-wrap: wrap;
@@ -59,4 +84,43 @@ header select {
 .mountain-container h1 {
   text-align: center;
   font-size: 22px;
+}
+
+@media only screen and (max-width: 800px) {
+  .mountain-container {
+    width: 48.5%;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  header {
+    flex-wrap: wrap;
+  }
+  header h1 {
+    margin-left: 0;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 10px;
+  }
+
+  header div {
+    margin-right: 0;
+    margin-bottom: 20px;
+    width: 100%;
+    justify-content: center;
+  }
+
+  header div select {
+    margin-right: 0;
+  }
+
+  #mountains {
+    top: 126px;
+  }
+}
+
+@media only screen and (max-width: 490px) {
+  .mountain-container {
+    width: 100%;
+  }
 }
